--- a/src/ChatApp/Resources/SharedResources/SharedResource.resx
+++ b/src/ChatApp/Resources/SharedResources/SharedResource.resx
@@ -58,6 +58,16 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <!-- Common -->
+  <data name="Add" xml:space="preserve">
+    <value>追加</value>
+  </data>
+  <data name="Remove" xml:space="preserve">
+    <value>削除</value>
+  </data>
+  <data name="Change" xml:space="preserve">
+    <value>変更</value>
+  </data>
 
   <!-- Model Validation Messages -->
   <data name="The {0} field is required." xml:space="preserve">
@@ -126,8 +136,7 @@
     <value>ログインに失敗しました。</value>
   </data>
   <data name="Please confirm your account by clicking this link: &lt;a href=&quot;{0}&quot;&gt;link&lt;/a&gt;" xml:space="preserve">
-    <value><![CDATA[アカウントを登録しました。<br/>
-<a href="{0}">リンク</a>をクリックしてアカウントを確認してください。]]></value>
+    <value><![CDATA[アカウントを登録しました。<br/><a href="{0}">リンク</a>をクリックしてアカウントを確認してください。]]></value>
   </data>
   <data name="Please reset your password by clicking here: &lt;a href=&quot;{0}&quot;&gt;link&lt;/a&gt;" xml:space="preserve">
     <value><![CDATA[パスワードを再設定するには、<a href="{0}">リンク</a>をクリックしてください。]]></value>
@@ -135,6 +144,7 @@
   <data name="Reset Password" xml:space="preserve">
     <value>パスワードのリセット</value>
   </data>
+
   <!-- ManageController -->
   <data name="Your password has been changed." xml:space="preserve">
     <value>パスワードが変更されました。</value>
@@ -159,6 +169,9 @@
   </data>
   <data name="Submit" xml:space="preserve">
     <value>送信する</value>
+  </data>
+  <data name="Reset" xml:space="preserve">
+    <value>リセット</value>
   </data>
 
   <!-- Common Message -->
@@ -233,6 +246,53 @@
     <value><![CDATA[このアカウントはロックアウトされています。<br/>しばらくしてからもう一度お試しください。]]></value>
   </data>
 
+  <!-- ResetPassword -->
+  <data name="Reset Password." xml:space="preserve">
+    <value>パスワードのリセット</value>
+  </data>
+  <data name="Reset your password." xml:space="preserve">
+    <value>お使いのパスワードをリセットします。</value>
+  </data>
+
+  <!-- ChangePassword -->
+  <data name="Change Password." xml:space="preserve">
+    <value>パスワードの変更</value>
+  </data>
+  <data name="Change Password Form" xml:space="preserve">
+    <value>パスワードの変更フォーム</value>
+  </data>
+  <data name="Change password" xml:space="preserve">
+    <value>パスワードを変更する</value>
+  </data>
+
+  <!-- SetPassword -->
+  <data name="Set Password." xml:space="preserve">
+    <value>パスワードの設定</value>
+  </data>
+  <data name="Add a local account so you can log in without an external login." xml:space="preserve">
+    <value><![CDATA[パスワードを設定することで外部のログインなしでログインすることができるようになります。]]></value>
+  </data>
+  <data name="Set password" xml:space="preserve">
+    <value>パスワードを設定する</value>
+  </data>
+
+  <!-- Manage -->
+  <data name="Manage your account" xml:space="preserve">
+    <value>アカウントの管理</value>
+  </data>
+  <data name="Login Via {0}" xml:space="preserve">
+    <value>{0}でログイン</value>
+  </data>
+  <data name="External Login" xml:space="preserve">
+    <value>外部ログイン</value>
+  </data>
+  <data name="Full Name" xml:space="preserve">
+    <value>氏名</value>
+  </data>
+  <data name="Avatar" xml:space="preserve">
+    <value>アバター</value>
+  </data>
+
   <!-- Identity Error Messages -->
   <data name="Email '{0}' is already taken." xml:space="preserve">
     <value>メールアドレス '{0}' はすでに使用されています。</value>
@@ -241,6 +301,34 @@
   <data name="User name '{0}' is already taken." xml:space="preserve">
     <value>ユーザ名 '{0}' はすでに使用されています。</value>
     <comment>DuplicateUserName</comment>
+  </data>
+  <data name="Passwords must have at least one non alphanumeric character." xml:space="preserve">
+    <value>パスワードには、少なくとも1つの英数字以外の文字が必要です。</value>
+    <comment>PasswordRequiresNonAlphanumeric</comment>
+  </data>
+  <data name="Passwords must have at least one digit ('0'-'9')." xml:space="preserve">
+    <value>パスワードには少なくとも1桁の数字（'0'〜 '9'）が必要です。</value>
+    <comment>PasswordRequiresDigit</comment>
+  </data>
+  <data name="Passwords must have at least one uppercase ('A'-'Z')." xml:space="preserve">
+    <value>パスワードには少なくとも1つの大文字（'A'〜 'Z'）が必要です。</value>
+    <comment>PasswordRequiresUpper</comment>
+  </data>
+  <data name="Incorrect password." xml:space="preserve">
+    <value>パスワードが間違っています。</value>
+    <comment>PasswordMismatch</comment>
+  </data>
+  <data name="Passwords must have at least one lowercase ('a'-'z')." xml:space="preserve">
+    <value>パスワードには、少なくとも1つの小文字（'a' - 'z'）が必要です。</value>
+    <comment>PasswordRequiresLower</comment>
+  </data>
+  <data name="Passwords must use at least {0} different characters." xml:space="preserve">
+    <value>パスワードは少なくとも{0}個の異なる文字を使用する必要があります。</value>
+    <comment>PasswordRequiresUniqueChars</comment>
+  </data>
+  <data name="Passwords must be at least {0} characters." xml:space="preserve">
+    <value>パスワードは少なくとも{0}文字でなければなりません。</value>
+    <comment>PasswordTooShort</comment>
   </data>
 
   <!--
@@ -299,30 +387,6 @@
   <data name="NullSecurityStamp" xml:space="preserve">
     <value>User security stamp cannot be null.</value>
     <comment>Error when a user's security stamp is null.</comment>
-  </data>
-  <data name="PasswordMismatch" xml:space="preserve">
-    <value>Incorrect password.</value>
-    <comment>Error when a password doesn't match</comment>
-  </data>
-  <data name="PasswordRequiresDigit" xml:space="preserve">
-    <value>Passwords must have at least one digit ('0'-'9').</value>
-    <comment>Error when passwords do not have a digit</comment>
-  </data>
-  <data name="PasswordRequiresLower" xml:space="preserve">
-    <value>Passwords must have at least one lowercase ('a'-'z').</value>
-    <comment>Error when passwords do not have a lowercase letter</comment>
-  </data>
-  <data name="PasswordRequiresNonAlphanumeric" xml:space="preserve">
-    <value>Passwords must have at least one non alphanumeric character.</value>
-    <comment>Error when password does not have enough non alphanumeric characters</comment>
-  </data>
-  <data name="PasswordRequiresUpper" xml:space="preserve">
-    <value>Passwords must have at least one uppercase ('A'-'Z').</value>
-    <comment>Error when passwords do not have an uppercase letter</comment>
-  </data>
-  <data name="PasswordTooShort" xml:space="preserve">
-    <value>Passwords must be at least {0} characters.</value>
-    <comment>Error message for passwords that are too short</comment>
   </data>
   <data name="RoleNotFound" xml:space="preserve">
     <value>Role {0} does not exist.</value>
@@ -419,10 +483,6 @@
   <data name="StoreNotIUserTwoFactorRecoveryCodeStore" xml:space="preserve">
     <value>Store does not implement IUserTwoFactorRecoveryCodeStore&lt;User&gt;.</value>
     <comment>Error when the store does not implement this interface</comment>
-  </data>
-  <data name="PasswordRequiresUniqueChars" xml:space="preserve">
-    <value>Passwords must use at least {0} different characters.</value>
-    <comment>Error message for passwords that are based on similar characters</comment>
   </data>
   <data name="NoRoleType" xml:space="preserve">
     <value>No RoleType was specified, try AddRoles&lt;TRole&gt;().</value>
