--- a/src/ChatApp/Resources/SharedResources/SharedResource.resx
+++ b/src/ChatApp/Resources/SharedResources/SharedResource.resx
@@ -123,6 +123,9 @@
   <data name="Confirm new password" xml:space="preserve">
     <value>新しいパスワード確認</value>
   </data>
+  <data name="ImageFile" xml:space="preserve">
+    <value>画像ファイル</value>
+  </data>
 
   <!-- Controller Messages -->
   <!-- Account Controller -->
